fix background color visibility

--- a/join/src/app/shared/header/header.scss
+++ b/join/src/app/shared/header/header.scss
@@ -58,22 +58,23 @@
   .link_initials {
     width: 56px;
     height: 56px;
-    border: 2px solid $primary;
     border-radius: 50%;
+    border: 2px solid $primary;
     color: $secondary;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 24px;
+    font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    user-select: none;
 
     &:hover {
-      background-color: $menu-button-hover;
+      background-color: $greyish;
     }
 
     &.active {
-      background-color: $menu-button-hover;
+      background-color: $greyish;
     }
   }
 
